2003-12-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-uri.c:
	- Consider #index to be equal to no fragment.

	* src/yelp-window.c:
	- Some improvement to the history mechanism.

2003-12-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Transpose Titlepage and Contents.

	* src/yelp-main.c:
	- Handle startup notification.

	* test/testdoc1/testdoc1.xml:
	- Change to 4.1.2.  I need to fix this fiasco.  ~sigh~

2003-12-29  Shaun McCance  <shaunm@gnome.org>

	* test/testdoc1/testdoc1.xml:
	- Put in a test for classsynopsis.

2003-12-26  Shaun McCance  <shaunm@gnome.org>

	* configure.in
	* src/Makefile.am
	- Updates dependencies.

	* data/Makefile.am:
	* data/icons/Makefile.am:
	* data/icons/caution.png:
	* data/icons/important.png:
	* data/icons/note.png:
	* data/icons/tip.png:
	* data/icons/warning.png:
	- Adding icons here.

	* src/yelp-db-pager.c:
	- Changed params around a bit.

	* test/testdoc1/testdoc1.xml:
	- Changes to admonition samples.

2003-12-26  Shaun McCance  <shaunm@gnome.org>

	* AUTHORS:
	- Added myself to AUTHORS.

	* src/yelp-db-pager.c:
	- Fixed memory leak in params.

	* src/yelp-uri.c:
	* src/yelp-uri.h:
	* src/yelp-window.c:
	- Re-added Hallski's copyright statements.

	* test/testdoc1/testdoc1.xml:
	- Put actual content in, including admonition section.

2003-12-26  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* test/testdoc1/Makefile.am:
	* test/testdoc1/legal.xml:
	* test/testdoc1/testdoc1.omf:
	* test/testdoc1/testdoc1.xml:
	- Added test documents.

	* data/toc.xml.in:
	- Handling System|... stuff from SK.

2003-12-24  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- Add yelp-theme to test_pager_SOURCES

	* src/yelp-db-pager.c:
	* src/yelp-theme.c:
	* src/yelp-theme.h:
	- Theme the gray color of screen, programlisting, etc.

	* src/yelp-window.c:
	- Change keybindings up, for fun.

	* stylesheets/Makefile.am:
	* stylesheets/db2html-formal.xsl:
	* stylesheets/db2html-lists.xsl: