@@ -9,14 +9,6 @@
 		<category>GNOME</category>
 		<category>GNOME|Core Desktop</category>
 		<category>GNOME|Desktop</category>
-		<category>GNOME|Applets</category>
-		<category>GNOME|Applets|Amusement</category>
-		<category>GNOME|Applets|Clock</category>
-		<category>GNOME|Applets|Monitors</category>
-		<category>GNOME|Applets|Multimedia</category>
-		<category>GNOME|Applets|Network</category>
-		<category>GNOME|Applets|Utility</category>
-		<category>GNOME|Graphics</category>
 		<category>GNOME|Settings</category>
 		<category>GNOME|System</category>
 		<category>GNOME|Other</category>
@@ -33,6 +25,19 @@
 		<_title>Applications</_title>
 
 		<category>GNOME|Applications</category>
+		<category>GNOME|Applications|Accessories</category>
+
+		<toc id="Applets">
+			<_title>Applets</_title>
+
+			<category>GNOME|Applets</category>
+			<category>GNOME|Applets|Amusement</category>
+			<category>GNOME|Applets|Clock</category>
+			<category>GNOME|Applets|Monitors</category>
+			<category>GNOME|Applets|Multimedia</category>
+			<category>GNOME|Applets|Network</category>
+			<category>GNOME|Applets|Utility</category>
+		</toc>
 
 		<toc id="Games">
 			<_title>Games and Entertainment</_title>
@@ -117,6 +122,7 @@
 			<category>Applications|Multimedia|Video|Editing</category>
 			<category>Applications|Multimedia|Video|Other</category>
 			<category>Applications|Multimedia|Other</category>
+			<category>GNOME|Graphics</category>
 			<category>GNOME|Multimedia</category>
 		</toc>
 
