@@ -1,3 +1,11 @@
+2003-12-30  Shaun McCance  <shaunm@gnome.org>
+
+	* db2html-html.xsl:
+	- Make admonitions use the only theme color we have for now.
+
+	* db2html-list.xsl:
+	- Don't bold varlistentry/term.  I might change this back.
+
 2003-12-29  Shaun McCance  <shaunm@gnome.org>
 
 	* db2html-division.xsl:
